ash-code/tui/src/app/snapshots/app__usage_tests__usage_dismissed.snap
---
source: ash-code/tui/src/app/usage_tests.rs
expression: "render(&app, 80, 16)"
---











────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────

  ⏸ ask permissions on
