ash-code/tui/src/app/snapshots/app__usage_tests__usage_failed.snap
---
source: ash-code/tui/src/app/usage_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]

> /usage┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
● Could │  Could not load account usage. Run /usage to retry.          │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ╭─────│                                                              │─────╮
  │ > Bu│  Esc to close                                                │     │
  ╰─────└──────────────────────────────────────────────────────────────┘del ─╯
