ash-code/tui/src/app/snapshots/app__usage_tests__usage_loading.snap
---
source: ash-code/tui/src/app/usage_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]

> /usage┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │  Loading…                                                    │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ╭─────│                                                              │─────╮
  │ > Bu│  Esc to close                                                │     │
  ╰─────└──────────────────────────────────────────────────────────────┘del ─╯
