ash-code/tui/src/app/snapshots/app__usage_tests__usage_missing_and_exhausted.snap
---
source: ash-code/tui/src/app/usage_tests.rs
expression: "render(&app, 80, 28)"
---
  .                                                        [— / —] [Dashboard]


        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │> ChatGPT plan  ·  pro                                        │
        │  Codex                                                       │
        │  Windows  ·  Not reported                                    │
        │  Code review                                                 │
        │  Availability  ·  Limit reached                              │
        │  7d window  ·  0% left (100% used)                           │
        │  Resets  ·  2033-05-18 03:33 UTC                             │
        │  Credits  ·  Not reported                                    │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ╭─────│  Esc to close  ·  Run /usage to refresh                      │─────╮
  │ > Bu└──────────────────────────────────────────────────────────────┘     │
  ╰──────────────────────────────────────────────────────── Automatic model ─╯
