ash-code/tui/src/app/snapshots/app__usage_tests__usage_signed_out.snap
---
source: ash-code/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                        [— / —] [Dashboard]

        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │  Sign in to ChatGPT: /config > Providers.                    │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ╭─────│                                                              │─────╮
  │ > Bu│  Esc to close                                                │     │
  ╰─────└──────────────────────────────────────────────────────────────┘del ─╯
