ash-code/tui/src/app/snapshots/app__usage_tests__usage_xai.snap
---
source: ash-code/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                                  [— / —] [Dashboard]


           ┌── Usage ────────────────────────────────────────────────────[✗]─┐
           │                                                                 │
           │> xAI plan  ·  SuperGrokPro                                      │
           │  Access  ·  Available                                           │
           │  Credits used  ·  12.125%                                       │
           │  Period  ·  Weekly                                              │
           │  Resets  ·  2026-09-28T00:00:00Z                                │
           │  Prepaid  ·  USD 90071992547409.93                              │
           │  On-demand used  ·  USD 0.00                                    │
           │  On-demand cap  ·  Not reported                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
           │                                                                 │
  ╭────────│  Esc to close  ·  Run /usage to refresh                         │─────────╮
  │ > Build└─────────────────────────────────────────────────────────────────┘         │
  ╰────────────────────────────────────────────────────────────────── Automatic model ─╯
